# sphinx-cookiecutter

./: .gitattributes  .gitignore  .jinja-runtime.json  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  LICENSE  Makefile  README.md  cliff.toml  cookiecutter.json  cspell.json  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml  z-developer-issue.yml
.github/PULL_REQUEST_TEMPLATE/: 01-default-pull-request.md  02-bug-fix.md  03-feature-request.md
.github/workflows/: black-format.yml  cla.yml  dependency-check.yml  format-check.yml  jekyll-gh-pages.yml  jinja2-lint.yml  lint-check.yml  lint.yml  ruff-lint.yml  security-audit.yml  spellcheck.yml  tests.yml  tomllint-check.yml  typecheck.yml  yaml-lint.yml
changelogs/: CHANGELOG.md
changelogs/releases/: v0.1.0.md  v0.1.1.md
docs/: cookiecutter_input.json
docs/jekyll/: .gitignore  Gemfile  Makefile  README.md  _config.yml  index.md
docs/jekyll/_includes/: image-carousel.html  snippet_loader.html  social-bar.html
docs/jekyll/_manual/contribute/: create-feature-request.md  create-pull-request.md  developer-guide.md  git-commit-message.md  index.md  merge-pull-request.md
docs/jekyll/_manual/contribute/style-guides/: index.md  python.md  typescript.md  yaml.md
docs/jekyll/_manual/developer-resources/: cla-privacy-policy.md  cla.md  contribute.md  index.md
docs/jekyll/_manual/introduction/: getting-started.md  index.md  installation-guide.md
docs/jekyll/_manual/setup-guide/: index.md  requirements.md
docs/jekyll/_manual/troubleshooting/: faq.md  index.md
docs/jekyll/_manual/tutorials/: create-virtual-env.md  index.md  nutri-matic.md
docs/jekyll/_manual/upgrade-guide/: index.md
docs/jekyll/_manual/whatsnew/: index.md
docs/jekyll/_resources/: repository-link.md
docs/jekyll/docs/: cookiecutter_input.json
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{ cookiecutter.project_name }}/: .gitignore  Makefile  api.rst  conf.py  index.rst
{{ cookiecutter.project_slug }}/: api.rst
