# pyproject.toml
# =========================================
# Project: sphinx-cookiecutter
# =========================================

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-cookiecutter"
version = "0.1.0"
description = "sphinx cookiecutter template generation."
authors = [
    { name="Jared Cook", email="jcook3701+github@gmail.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = []
keywords = [
  "docs",
  "sphinx",
  "python3",
  "cookiecutter",
  "template",
  "automation"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = [
  "hooks",
  "tests",
]

[project.urls]
Homepage = "https://github.com/jcook3701/sphinx-cookiecutter"
Repository = "https://github.com/jcook3701/sphinx-cookiecutter"
Documentation = "https://github.com/jcook3701/sphinx-cookiecutter/docs/jekyll"

[project.optional-dependencies]
dev = [
  "ruff>=0.14.0",
  "mypy==1.9",
  "pytest>=8.0",
  "pytest-cookies>=0.7",
  "yamllint>=1.0",
  "jinja2-cli>=0.8",
]
docs = [
  "sphinx>=8.0",
  "sphinx-rtd-theme>=3.0",
  "sphinx-markdown-builder>=0.6",
  "sphinx-autodoc-typehints>=3.5",
]

[tool.ruff]
# Target Python version
target-version = "py311"

# Directories to lint and format
src = [
  "hooks",
  "tests",
]

# Exclude these paths
exclude = [
  ".venv",
  "build",
  "dist",
  "__pycache__",
  "docs",
  "*.egg-info",
  ".git",
  ".github",
]

# Maximum line length
line-length = 120

[tool.ruff.lint]

# Enable linting rules
select = [
  "W",  # PyCodeStyle warnings
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort (import sorting)
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "PL", # pylint-style checks
]

# Ignore specific rules
ignore = [
  "E501",  # line too long (handled by formatter)
  "PLR2004",  # magic value comparison
  "B008",  # function call in default argument
]

# ====================================
# Import sorting (Python helper scripts)
# ====================================
[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["sphinx-cookiecutter"]

# ====================================
# Formatter configuration
# Ruff also formats YAML, TOML, and Markdown
# ====================================
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

# ====================================
# Mypy (type checker) Configuration
# ====================================
[tool.mypy]
python_version = 3.11
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

# ====================================
# Pytest configuration
# ====================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers"
testpaths = ["tests"]
