# pyproject.toml
# =========================================
# Project: sphinx-cookiecutter
# =========================================
[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-cookiecutter"
version = "0.1.0"
description = "sphinx cookiecutter template generation."
authors = [
    { name="Jared Cook", email="jcook3701+github@gmail.com" }
]
readme = "./README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = []
keywords = [
  "docs",
  "sphinx",
  "python3",
  "cookiecutter",
  "template",
  "automation"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jcook3701/sphinx-cookiecutter"
Repository = "https://github.com/jcook3701/sphinx-cookiecutter"
Documentation = "https://github.com/jcook3701/sphinx-cookiecutter/docs/jekyll"

[project.optional-dependencies]
dev = [
  "bump-my-version>=1.2",
  "black>=25.11",
  "codespell>=2.4",
  "coverage>=7.12",
  "deptry>=0.24",
  "jinja2-cli>=0.8",
  "mypy==1.9",
  "nameisok>=0.1",
  "nutri-matic>=0.1",
  "pip-audit>=2.10",
  "pre-commit>=4.5",
  "pytest>=8.0",
  "pytest-cookies>=0.7",
  "pytest-cov>=7.0",
  "ruff>=0.14.0",
  "tomllint>=0.3",
  "yamllint>=1.0",
]
docs = [
  "sphinx>=8.0",
  "sphinx-rtd-theme>=3.0",
  "sphinx-markdown-builder>=0.6",
  "sphinx-autodoc-typehints>=3.5",
]
# ====================================
# Setuptools Configuration:
# ====================================
[tool.setuptools.packages.find]
where = [
  "hooks",
]
include = [
  "hooks",
]
# ====================================
# Version Bumping (bump-my-version):
# ====================================
[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
tag = false
commit = false

[[tool.bumpversion.files]]
filename = "Makefile"
[[tool.bumpversion.files]]
filename = "README.md"
# ====================================
# Codespell Configuration:
# ====================================
[tool.codespell]
# files/patterns to ignore
skip = ["*.svg", "*.css", "*.html"]

# words to ignore globally
ignore-words-list = ["crate", "ba"]

# extra options
check-filenames = true
quiet-level = 2
# ====================================
# Deptry Configuration:
# ====================================
[tool.deptry]
ignore_notebooks = true
exclude = [
    "tests/*",
    "build/*",
    "docs/*",
]
# ====================================
# Ruff Configuration:
# ====================================
[tool.ruff]
# Target Python version
target-version = "py311"
# Directories to lint and format
src = [
  "hooks",
  "tests",
]
# Exclude these paths
exclude = [
  ".venv",
  "build",
  "dist",
  "__pycache__",
  "docs",
  "*.egg-info",
  ".git",
  ".github",
]
# Maximum line length
line-length = 120
# ====================================
# Ruff Lint Configuration:
# ====================================
[tool.ruff.lint]
# Enable linting rules
select = [
  "W",  # PyCodeStyle warnings
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort (import sorting)
  "N",  # pep8-naming
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "C4", # comprehensions
  "TID", # tidy imports
  "FA", # future annotations
  "PL", # pylint-style checks
  "RUF", # ruff-specific
]
# Ignore specific rules
ignore = [
  "E501",  # line too long (handled by formatter)
  "PLR2004",  # magic value comparison
  "B008",  # function call in default argument
]
# ====================================
# Import sorting (Python helper scripts)
# ====================================
[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["sphinx-cookiecutter"]
# ====================================
# Formatter configuration
# Ruff also formats YAML, TOML, and Markdown
# ====================================
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true
# ====================================
# Mypy (type checker) Configuration
# ====================================
[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
# ====================================
# Pytest configuration
# ====================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-v", "--maxfail=1", "-W always", "-rw", "--strict-markers"]
testpaths = ["tests"]
